# smeeting

./: .gitignore  LICENSE  README.md  build.gradle.kts  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/example/kotlin_asr_with_ncnn/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/stardazz/smeeting/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/kotlin/com/example/kotlin_asr_with_ncnn/: ASRApplication.kt  AsrModelCoordinator.kt  MainActivity.kt  MainAppScreen.kt  MainUiViewModel.kt  ThemePreferences.kt
app/src/main/kotlin/com/example/kotlin_asr_with_ncnn/di/: AppModule.kt  HistoryRepositoryModule.kt  RepositoryModule.kt
app/src/main/kotlin/com/example/kotlin_asr_with_ncnn/startup/: AsrModelLoad.kt  AsrStartupTaskProvider.kt  ModelInitNotifier.kt  StartupEntryPoint.kt  StartupPreferenceCache.kt  StartupRunner.kt  StartupTaskIds.kt
app/src/main/kotlin/com/example/kotlin_asr_with_ncnn/startup/tasks/: InitAsrModelTask.kt  InitLoggingTask.kt  ReadDisplayPreferencesTask.kt  WarmAppMetadataTask.kt
app/src/main/kotlin/com/stardazz/smeeting/: ASRApplication.kt  MainActivity.kt  MainAppScreen.kt  MainUiViewModel.kt
app/src/main/kotlin/com/stardazz/smeeting/di/: RepositoryModule.kt
app/src/main/res/values/: ic_launcher_background.xml  strings.xml  themes.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/test/java/com/example/kotlin_asr_with_ncnn/: ExampleUnitTest.kt
app/src/test/java/com/stardazz/smeeting/: ExampleUnitTest.kt
benchmarks/: build.gradle.kts
benchmarks/src/main/java/com/example/kotlin_asr_with_ncnn/benchmarks/: benchmarks.kt
core/common/: build.gradle.kts
core/common/src/main/kotlin/com/example/kotlin_asr_with_ncnn/core/common/: ThemePreferences.kt
core/common/src/main/kotlin/com/stardazz/smeeting/core/common/: InferenceCoordinator.kt  ThemePreferences.kt
core/llm/: build.gradle.kts  consumer-rules.pro
core/llm/src/main/cpp/: CMakeLists.txt  gdr_stub.cpp  llm_jni.cpp
core/llm/src/main/cpp/cmake/: llm-vulkan-host-toolchain.cmake  llm-vulkan-host-toolchain.example.cmake
core/llm/src/main/kotlin/com/stardazz/smeeting/core/llm/: LlamaCppBridge.kt  LlmNcnnDevicePolicy.kt  NcnnLlmBridge.kt
core/media/: build.gradle.kts
core/media/src/main/cpp/: CMakeLists.txt  kotlin_asr_with_ncnn.cpp
core/media/src/main/cpp/jniLibs/: README.md
core/media/src/main/kotlin/com/example/kotlin_asr_with_ncnn/core/media/: AudioRecorder.kt  InferenceBackend.kt  ModelConfig.kt  NcnnNativeBridge.kt
core/media/src/main/kotlin/com/k2fsa/sherpa/ncnn/: SherpaNcnn.kt
core/media/src/main/kotlin/com/stardazz/smeeting/core/media/: AudioRecorder.kt  InferenceBackend.kt  ModelConfig.kt  NcnnNativeBridge.kt
core/startup/: build.gradle.kts
core/startup/src/main/kotlin/com/example/kotlin_asr_with_ncnn/core/startup/: AsrModelLoad.kt  AsrModelManager.kt  AsrStartupTaskProvider.kt  Dag.kt  ModelInitNotifier.kt  StartupDispatcher.kt  StartupEntryPoint.kt  StartupLogger.kt  StartupManager.kt  StartupPreferenceCache.kt  StartupRunner.kt  StartupTask.kt  StartupTaskIds.kt  StartupTaskProvider.kt  StartupTracer.kt  TaskRegistry.kt
core/startup/src/main/kotlin/com/stardazz/smeeting/core/startup/: AsrModelManager.kt  AsrStartupTaskProvider.kt  Dag.kt  LlmModelManager.kt  ModelInitNotifier.kt  StartupDispatcher.kt  StartupEntryPoint.kt  StartupLogger.kt  StartupManager.kt  StartupPreferenceCache.kt  StartupRunner.kt  StartupTask.kt  StartupTaskIds.kt  StartupTaskProvider.kt  StartupTracer.kt  TaskRegistry.kt
core/ui/: Color.kt  Theme.kt  Type.kt  build.gradle.kts
core/ui/src/main/kotlin/com/example/kotlin_asr_with_ncnn/core/ui/: AppTheme.kt
core/ui/src/main/kotlin/com/stardazz/smeeting/core/ui/: AppTheme.kt  (+1 more)
data/: build.gradle.kts
data/src/main/kotlin/com/example/kotlin_asr_with_ncnn/data/db/: AppDatabase.kt  DatabaseModule.kt  TranscriptionHistoryDao.kt  TranscriptionHistoryEntity.kt
data/src/main/kotlin/com/example/kotlin_asr_with_ncnn/data/repository/: ASRRepositoryImpl.kt  TranscriptionHistoryRepositoryImpl.kt
data/src/main/kotlin/com/stardazz/smeeting/data/db/: AppDatabase.kt  DatabaseModule.kt  TranscriptionHistoryDao.kt  TranscriptionHistoryEntity.kt
data/src/main/kotlin/com/stardazz/smeeting/data/repository/: ASRRepositoryImpl.kt  LLMRepositoryImpl.kt  TranscriptionHistoryRepositoryImpl.kt
domain/: build.gradle.kts
domain/src/main/kotlin/com/example/kotlin_asr_with_ncnn/domain/model/: Transcription.kt  TranscriptionHistoryEntry.kt
domain/src/main/kotlin/com/example/kotlin_asr_with_ncnn/domain/repository/: ASRRepository.kt  TranscriptionHistoryRepository.kt
domain/src/main/kotlin/com/example/kotlin_asr_with_ncnn/domain/usecase/: AppendTranscriptionHistoryUseCase.kt  DeleteTranscriptionHistoryEntryUseCase.kt  ObserveTranscriptionHistoryUseCase.kt  StartASRUseCase.kt  StopASRUseCase.kt
domain/src/main/kotlin/com/stardazz/smeeting/domain/model/: Transcription.kt  TranscriptionHistoryEntry.kt  TranscriptionSummary.kt
domain/src/main/kotlin/com/stardazz/smeeting/domain/repository/: ASRRepository.kt  LLMRepository.kt  TranscriptionHistoryRepository.kt
domain/src/main/kotlin/com/stardazz/smeeting/domain/usecase/: AppendTranscriptionHistoryUseCase.kt  DeleteTranscriptionHistoryEntryUseCase.kt  ObserveTranscriptionHistoryUseCase.kt  StartASRUseCase.kt  StopASRUseCase.kt  SummarizeTranscriptionUseCase.kt  UpdateHistorySummaryUseCase.kt
feature/: build.gradle.kts
feature/history/: build.gradle.kts
feature/history/src/main/res/values/: strings.xml
feature/history/src/main/res/values-zh-rCN/: strings.xml
feature/home/: build.gradle.kts
feature/home/src/main/res/values/: strings.xml
feature/home/src/main/res/values-zh-rCN/: strings.xml
feature/settings/: build.gradle.kts
feature/settings/src/main/res/values/: strings.xml
feature/settings/src/main/res/values-zh-rCN/: strings.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
scripts/: build_sherpa_ncnn_and_copy_to_app.sh
(+22 files in other folders)
